edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/entry_type_daily_work_period.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/nation_numeric.proto";

// Represents the content of the EF_Places file, where daily work periods begin and/or end.
//
// The file structure is specified in Appendix 2, Section 4.2.1.
//
//     EF Places
//     └─CardPlaceDailyWorkPeriod
//
// The data type `CardPlaceDailyWorkPeriod` is specified in the Data Dictionary, Section 2.27.
//
// ASN.1 Specification:
//
//     CardPlaceDailyWorkPeriod ::= SEQUENCE {
//         placePointerNewestRecord INTEGER(0..NoOfCardPlaceRecords-1),
//         placeRecords SET SIZE(NoOfCardPlaceRecords) OF PlaceRecord
//     }
message Places {
  // Represents a single place record.
  //
  // The data type `PlaceRecord` is specified in the Data Dictionary, Section 2.117.
  //
  // ASN.1 Specification:
  //
  //     PlaceRecord ::= SEQUENCE {
  //         entryTime TimeReal,
  //         entryTypeDailyWorkPeriod EntryTypeDailyWorkPeriod,
  //         dailyWorkPeriodCountry NationNumeric,
  //         dailyWorkPeriodRegion RegionNumeric,
  //         vehicleOdometerValue OdometerShort
  //     }
  message Record {
    // Time of the entry. See DD Section 2.162 for `TimeReal`.
    google.protobuf.Timestamp entry_time = 1;

    // Type of entry (begin or end). See DD Section 2.66 for `EntryTypeDailyWorkPeriod`.
    datadictionary.v1.EntryTypeDailyWorkPeriod entry_type = 2;

    // Country code. See DD Section 2.101 for `NationNumeric`.
    datadictionary.v1.NationNumeric daily_work_period_country = 4;

    // Region code. See DD Section 2.122 for `RegionNumeric`.
    int32 daily_work_period_region = 6;

    // Odometer at the time of entry. See DD Section 2.113 for `OdometerShort`.
    int32 vehicle_odometer_km = 7;

    // Reserved byte (usually 0x00, but preserved for roundtrip accuracy).
    int32 reserved_byte = 8;
  }

  // Index of the last updated place record.
  int32 newest_record_index = 1;

  // The set of place records.
  repeated Record records = 2;

  // Trailing bytes that don't form complete records (for roundtrip accuracy).
  bytes trailing_bytes = 3;

  // Digital signature for the EF_Places file content.
  bytes signature = 4;
}
